fixed slider-img bag on safari

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,22 +1,25 @@
 .slider {
-  background-image: url(../images/main/main-1.svg);
+  background-image: url(../images/slider/slide-img-1.jpg);
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+
+  max-height: 720px;
 
   border-radius: 30px 0 30px 0;
+  padding-bottom: 50px;
 
-  position: relative;
 
   &__container {
     position: relative;
-    width: 100%;
-    height: 100%;
+
+    min-height: 600px;
   }
 
   &__text {
     position: absolute;
-    top: 80%;
-    left: 10%;
+    top: 530px;
+    left: 100px;
     
   }
 
@@ -58,15 +61,15 @@
     &--left {
       position: absolute;
 
-      top: 85%;
-      left: -10%;
+      top: 550px;
+      left: -50px;
     }
 
     &--right {
       position: absolute;
 
-      top: 85%;
-      left: 0%;
+      top: 550px;
+      left: 10px;
     }
   }
 }
