--- a/src/styles/blocks/strategic.scss
+++ b/src/styles/blocks/strategic.scss
@@ -54,10 +54,10 @@
   &__slider {
     padding-left: 120px;
 
-    opacity: 0;
+    display: none;
 
     @include onDesctop {
-      opacity: 1;
+      display: block;
     }
   }
 }
